fix: carousel galery overflow

--- a/components/galleryOverlay/GalleryOverlay.scss
+++ b/components/galleryOverlay/GalleryOverlay.scss
@@ -135,10 +135,10 @@
 }
 
 .navButtons {
-  @include maxMobile {
-    display: flex;
-    padding: 0 1.6rem;
-  }
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0 1.6rem;
+  overflow: scroll;
 }
 
 .navButton {
